--- a/about.html
+++ b/about.html
@@ -9,13 +9,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style/style.css">
     </head>
-    <body>
+    <body class="background">
         <input type="text" placeholder="text" class="box"></input>
         <button onclick="searchcharname()" class="btn">Search</button>
-        <input  id="main1" type="text" placeholder="pricevalue" class="main" >
-        <button  onclick="totalamount()">ADD</button>
+        <input  id="main1" type="text" placeholder="pricevalue" class="box" >
+        <button  onclick="totalamount()" class="btn">ADD</button>
         <div id="display-container"></div>
         
         <script src="./index.js"></script>
     </body>
-</html>
+</html>>
