--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
        <div class="topcontent">
         <img src="./img/logo.png"class="img" alt="">
         <a href="./about.html" target="_self">HOME</a>
-        <a href="/about" onclick="gotonextPage(event)">ABOUT</a> 
-        <a href="/contact" onclick="gotonextPage(event)">CONTACT</a> 
-        <a href="/blog" onclick="gotonextPage(event)">BLOG</a>
-        <div class="page-container"></div>
+        <a href="/about">ABOUT</a> 
+        <a href="/contact" >CONTACT</a> 
+        <a href="/blog">BLOG</a>
+        <div></div>
        </div>
     </div>
         <input type="text" placeholder="Name" class="box"></input>
